# CLARA-MEC

./: README.md  config.yaml  config.yaml.txt  plot_results.py  pyproject.toml  requirements.txt  run_experiments.py  test_gpu.py  train.py
baselines/: heuristic_offloading.py  mtda_centralized.py
experiments/: aggregation_hypothesis_sweep.py
federated/: continual_learning.py  flower_client.py  strategies.py
mec/: environment.py
models/: multitask_policy_model.py
mtda_framework/: config.yaml  plot_metrics.py  run_mtda.py  train_mtda.py
mtda_framework/continual/: stochastic_recovery.py
mtda_framework/data/: mec_generator.py
mtda_framework/models/: multitask_model.py
mtda_framework/optimization/: gekko_solver.py
mtda_framework/results/: mtda_metrics_2026-05-25_20-01-23.csv  mtda_metrics_2026-05-25_21-27-07.csv  mtda_metrics_2026-05-28_19-16-22.csv  mtda_metrics_2026-05-28_21-04-40.csv
mtda_framework/training/: train_student.py  train_teacher.py
mtda_framework/utils/: config_loader.py  metrics_logger.py  seed.py
results/: CLARA-MEC_metrics_2026-05-29_18-12-33_CIFAR10.csv  FedProx_metrics_2026-05-01_16-59-08_FMNIST.csv  claramec_metrics_2026-04-29_10-01-21_FMNIST.csv
utils/: data_loader.py  metrics_logger.py  seed.py
