[project]
name = "clara-mec"
version = "0.1.0"
description = "CLARA-MEC: framework experimental para aprendizado federado, offloading e adaptação de domínio em MEC."
requires-python = ">=3.10"
dependencies = [
  "flwr[simulation]>=1.8",
  "tensorflow>=2.15",
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "scikit-learn>=1.3",
  "PyYAML>=6.0",
  "gekko>=1.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["train", "run_experiments", "plot_results"]

[tool.setuptools.packages.find]
where = ["."]
include = [
  "baselines*",
  "federated*",
  "mec*",
  "models*",
  "mtda_framework*",
  "utils*",
]
